--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,104 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+<html lang="en"><head>
+    <title>friend's circle</title>
+    <link rel="icon" href="/images/favicon.ico">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="/stylesheets/style.css" rel="stylesheet" type="text/css">
+    <link href="http://pingendo.github.io/pingendo-bootstrap/themes/default/bootstrap.css" rel="stylesheet" type="text/css">
   </head>
+		
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <div class="navbar navbar-fixed-top myBackground">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-ex-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand"><img height="30" width="150" alt="friend's circle" src="/images/Drawing.png"></a>
+        </div>
+        <div class="collapse navbar-collapse" id="navbar-ex-collapse">
+          <form class="navbar-form navbar-right" role="search">
+            <div class="form-group">
+              <input type="text" class="form-control" name="username" placeholder="Username">
+            </div>
+            <div class="form-group">
+              <input type="text" class="form-control" name="password" placeholder="Password">
+            </div>
+            <button type="submit" class="btn btn-default">Sign In</button>
+          </form>
+        </div>
+      </div>
+    </div>
+    <div class="section">
+      <div class="container">
+        <div class="row"></div>
+      </div>
+    </div>
+    <div class="section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8">
+            <img src="/images/friendsbackground.jpg"
+            class="img-responsive">
+          </div>
+          <div class="col-md-4">
+            <h1>Sign up Today!!</h1>
+            <form role="form">
+              <div class="row nopadding" >
+                <div class="col-md-6 nopadding">
+                  <div class="form-group has-feedback">
+                    <input class="form-control input-lg" id="exampleInputEmail1" placeholder="First Name"
+                    type="text">
+                  </div>
+                </div>
+                <div class="col-md-6 nopadding">
+                  <div class="form-group has-feedback">
+                    <input class="form-control input-lg" id="exampleInputEmail1" placeholder="Last Name"
+                    type="text">
+                  </div>
+                </div>
+              </div>
+              <div class="form-group has-feedback">
+                <input class="form-control input-lg" id="exampleInputEmail1" placeholder="Email Address"
+                type="email">
+              </div>
+              <div class="form-group">
+                <input class="form-control input-lg" id="exampleInputPassword1" placeholder="Re-enter email Address"
+                type="email">
+              </div>
+             <div class="form-group">
+              <input class="form-control input-lg"  type="date" class="form-control" name="dateofbirth">
+            </div>
+              <div class="form-group">
+                <input class="form-control input-lg" id="exampleInputPassword1" placeholder="New Password"
+                type="password">
+              </div>
+              <div class="form-group">
+                <input class="form-control input-lg" id="exampleInputPassword1" placeholder="Confirm password"
+                type="password">
+              </div>
+               <div class="form-group">
+                <div class="radio">
+                  <label class="radio-inline">
+                    <input type="radio" name="optionsRadios" id="optionsRadios1" value="male"
+                    checked="">Male</label>
+                  <label class="radio-inline">
+                    <input type="radio" name="optionsRadios" id="optionsRadios2" value="female"
+                    checked="">Female</label>
+                </div>
+              </div>
+              <button type="submit" class="btn btn-default btn-lg">Sign Up</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
+
 </html>
