--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,10 +8,19 @@
  https://s3-us-west-2.amazonaws.com/s.cdpn.io/45544/background-svg.svg
 */
 
+#toolbarname{
+	 color: #FFFFFF;
+}
+
+
+
 body {
-	background-color: #DFE3EE;
-	margin-top: 100px; /* Required margin for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
-/*!	background: url("/images/friendsbackground.jpg") no-repeat center center fixed;
+  background-color: #DFEDRE;
+  margin-top: 100px;
+  overflow: auto;
+  height: 100%;
+  /* Required margin for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+  /*!	background: url("/images/friendsbackground.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -19,24 +28,94 @@ body {
 }
 
 .nopadding {
-   padding: 0 !important;
-   margin: 0 !important;
+  padding: 0 !important;
+  margin: 0 !important;
 }
 
 .myBackground {
-  background-color: rgba(255,255,255, 0.5);
+  background-color: rgba(255, 255, 255, 0.5);
   color: inherit;
 }
 
 .navbar {
-    background-color: #3B5998;
-    border-color: #3B5998;
+  background-color: #3B5998;
+  border-color: #3B5998;
 }
 
 .full {
-    background: url("/images/friendsbackground.jpg") no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
+  background: url("/images/friendsbackground.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+}
+
+@media (min-width: 768px){
+  #newsfeed {
+    overflow-y: auto; 
+    height:90%;
+  }
+  
+  #GroupsList{
+    overflow-y: scroll;
+    height:30%;
+  }
+}
+///newly added
+.navbar-header {
+  float: left;
+  padding-left: 15px;
+}
+
+a:hover {
+  color: #1c5380;
+}
+
+.navbar-brand {
+  height: 50px;
+  padding: 0 15px;
+  font-size: inherit;
+  line-height: 50px;
+}
+
+.navbar-nav {
+  float: left;
+  margin: 0;
+}
+
+.navbar-nav > li {
+  float: left;
+}
+
+.navbar-nav > li > a {
+  padding: 0 15px;
+  line-height: 50px;
+}
+
+.navbar-text {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.center-form {
+  width: 315px;
+  margin: 10% auto;
+}
+
+.thumbnail {
+  border: 0;
+  border-radius: 0;
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, .04),0 1px 5px rgba(0, 0, 0, .1);
+}
+
+.has-feedback .form-control {
+  padding-left: 42px;
+}
+
+#homebutton{
+	padding: 8px 15px;
+}
+
+#ProfileDisplayLink{
+	padding: 0px 15px;
 }
