--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.4/angular.js"></script>
+    <script type="text/javascript" src="/js/libJS.js"></script>
     <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="/stylesheets/style.css" rel="stylesheet" type="text/css">
     <link href="http://pingendo.github.io/pingendo-bootstrap/themes/default/bootstrap.css" rel="stylesheet" type="text/css">
   </head>
 		
-  <body>
+  <body ng-app="SocialMediaPrototype">
     <div class="navbar navbar-fixed-top myBackground">
       <div class="container">
         <div class="navbar-header">
@@ -22,15 +24,21 @@
           </button>
           <a class="navbar-brand"><img height="30" width="150" alt="friend's circle" src="/images/Drawing.png"></a>
         </div>
-        <div class="collapse navbar-collapse" id="navbar-ex-collapse">
-          <form class="navbar-form navbar-right" role="search">
+        <div class="collapse navbar-collapse" id="navbar-ex-collapse" ng-controller="loginController">
+        <div class="alert alert-danger" ng-init="user = <%= login  %>" ng-show="user.errorInloginForm">
+	    	<strong>Error! {{user.errorMessage}}</strong>
+	    </div>
+    <!-- =================================================================== -->
+    <!--  ================Login======FORM================================== -->
+    <!-- =================================================================== -->
+          <form class="navbar-form navbar-right" role="search" name="loginForm" ng-submit="LoginUser()" action="/login" method="post" novalidate>
             <div class="form-group">
-              <input type="text" class="form-control" name="username" placeholder="Username">
+              <input type="text" class="form-control" name="username" id="user.username" ng-model="user.username" placeholder="Email" required>
             </div>
             <div class="form-group">
-              <input type="text" class="form-control" name="password" placeholder="Password">
+              <input type="password" class="form-control" name="password" id="user.password" ng-model="user.password" placeholder="Password" required>
             </div>
-            <button type="submit" class="btn btn-default">Sign In</button>
+            <button type="submit" ng-disabled="signUpForm.$invalid" class="btn btn-default">Sign In</button>
           </form>
         </div>
       </div>
@@ -47,53 +55,62 @@
             <img src="/images/friendsbackground.jpg"
             class="img-responsive">
           </div>
-          <div class="col-md-4">
+    <!-- =================================================================== -->
+    <!--  ===============Sign=Up======FORM================================== -->
+    <!-- =================================================================== -->
+          <div class="col-md-4" ng-controller="signUpController" ng-init="user = <%= user %>">
             <h1>Sign up Today!!</h1>
-            <form role="form">
+            <form role="form" name="signUpForm" ng-submit="submitSignUpForm($event)" action="/signup" method="post" novalidate>
               <div class="row nopadding" >
                 <div class="col-md-6 nopadding">
                   <div class="form-group has-feedback">
-                    <input class="form-control input-lg" id="exampleInputEmail1" placeholder="First Name"
-                    type="text">
+                    <input class="form-control input-lg" id="user.firstname" name="firstname" placeholder="First Name"
+                    type="text" ng-model="user.firstname" required>
+                    <p ng-show="signUpForm.firstname.$invalid && !signUpForm.firstname.$pristine" class="help-block">First Name is required.</p>
                   </div>
                 </div>
                 <div class="col-md-6 nopadding">
                   <div class="form-group has-feedback">
-                    <input class="form-control input-lg" id="exampleInputEmail1" placeholder="Last Name"
-                    type="text">
+                    <input class="form-control input-lg" id="user.lastname" name="lastname" placeholder="Last Name"
+                    type="text" ng-model="user.lastName" required>
+                    <p ng-show="signUpForm.lastname.$invalid && !signUpForm.lastname.$pristine" class="help-block">Last Name is required.</p>
                   </div>
                 </div>
               </div>
               <div class="form-group has-feedback">
-                <input class="form-control input-lg" id="exampleInputEmail1" placeholder="Email Address"
-                type="email">
+                <input class="form-control input-lg" id="user.emailM" name="emailM" placeholder="Email Address"
+                type="email" ng-model="user.emailM" required>
+                <p ng-show="signUpForm.emailM.$invalid && !signUpForm.emailM.$pristine" class="help-block">Enter a valid email.</p>
               </div>
               <div class="form-group">
-                <input class="form-control input-lg" id="exampleInputPassword1" placeholder="Re-enter email Address"
-                type="email">
+                <input class="form-control input-lg" id="user.emailR" name="emailR" placeholder="Re-enter email Address"
+                type="email" ng-model="user.emailR" required>
+                 <p ng-show="signUpForm.emailR.$invalid && !signUpForm.emailR.$pristine" class="help-block">Enter a valid email.</p>
               </div>
-             <div class="form-group">
-              <input class="form-control input-lg"  type="date" class="form-control" name="dateofbirth">
+              <div class="form-group">
+                <input class="form-control input-lg" id="user.password" name="password" placeholder="New Password"
+                type="password" ng-model="user.password" ng-minlength="3" ng-maxlength="16" required>
+                 <p ng-show="signUpForm.password.$error.minlength" class="help-block">Password is too short.</p>
+            	 <p ng-show="signUpForm.password.$error.maxlength" class="help-block">Password is too long.</p>
+              </div>
+            <div class="form-group">
+             <label for="usr">Birthday</label>
+              <input class="form-control input-lg"  type="date" class="form-control" name="dateofbirth" ng-model="user.dateofbirth" required>
+              <p ng-show="signUpForm.dateofbirth.$invalid && user.dateofbirth > user.currentDate" class="help-block">Please Enter your Date of Birth.</p>
             </div>
-              <div class="form-group">
-                <input class="form-control input-lg" id="exampleInputPassword1" placeholder="New Password"
-                type="password">
-              </div>
-              <div class="form-group">
-                <input class="form-control input-lg" id="exampleInputPassword1" placeholder="Confirm password"
-                type="password">
-              </div>
                <div class="form-group">
                 <div class="radio">
+                  <label class="radio-inline"> 
+                    <input type="radio" name="gender" id="genderM" value="male" checked="true" ng-model="user.gender">Male</label>
                   <label class="radio-inline">
-                    <input type="radio" name="optionsRadios" id="optionsRadios1" value="male"
-                    checked="">Male</label>
-                  <label class="radio-inline">
-                    <input type="radio" name="optionsRadios" id="optionsRadios2" value="female"
-                    checked="">Female</label>
+                    <input type="radio" name="gender" id="genderF" value="female" checked="" ng-model="user.gender">Female</label>
                 </div>
               </div>
-              <button type="submit" class="btn btn-default btn-lg">Sign Up</button>
+              <button type="submit" ng-disabled="signUpForm.$invalid" class="btn btn-default btn-lg" >Sign Up</button>
+              <br>
+                <div class="alert alert-danger" ng-show="user.errorInForm">
+			    	<strong>Error!{{user.errorMessage}}</strong>
+			    </div>
             </form>
           </div>
         </div>
