--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -149,6 +149,19 @@ a:hover {
 	padding: 0px 15px;
 }
 
+.jumbotron {
+    position: relative;
+    background: #000 url("/images/group_image.jpg") center center;
+    width: 100%;
+    height:25%;
+    background-size: cover;
+    overflow: hidden;
+    background-position: right 50%;
+    background-repeat: no-repeat;
+    text-align: left;
+    text-shadow: 0 1px 3px rgba(0,0,0,.4), 0 0 30px rgba(0,0,0,.075);
+}
+
 #ProfileDisplayLink{
 	padding: 0px 15px;
 }
