--- a/views/userdetails.ejs
+++ b/views/userdetails.ejs
@@ -60,6 +60,11 @@
             <div class="row">
                <div class="col-md-3">
                   <img class="img-responsive" ng-src="{{user.IMAGE_URL}}">
+                  <form action="/uploadProfilePic" method="post", enctype="multipart/form-data" role="search" name="ProfileImageForm"
+                        ng-submit="uploadProfilePic()" novalidate="">
+                        <input type="file" ng-model="pofilepic" name="pofilepic">
+                        <button type="submit" ng-disabled="ProfileImageForm.$invalid" class="btn btn-primary" name="submit">Upload Picture</button>
+                  </form>
                </div>
                <div class="col-md-9">
                   <h1>{{user.FIRST_NAME}} {{user.LAST_NAME}}</h1>
@@ -86,7 +91,7 @@
                         </div>
                      </div>
                      <div class="col-md-8">
-                        <div id="mainView">
+                        <div id="tabView">
                            <div ng-include="currentTab"></div>
                         </div>
                      </div>
