--- a/views/groupdetails.ejs
+++ b/views/groupdetails.ejs
@@ -75,7 +75,7 @@
             </ul>
             <ul class="media-list">
               <li class="media">
-                <a class="pull-left" href="/friendslist"><img class="media-object" src="https://hdwallpapers.cat/wallpaper_high_contrast/two_friends_happiness_colors_smile_abstract_high_contrast_hd-wallpaper-1559778.jpg" height="54" width="54"></a>
+                <a class="pull-left" href="/friendslist"><img class="media-object" src="/images/friend_list_icon.png" height="54" width="54"></a>
                 <div class="media-body">
                   <h4 class="media-heading">Friends</h4>
                 </div>
