--- a/views/groups.ejs
+++ b/views/groups.ejs
@@ -66,22 +66,22 @@
                      <li class="media">
                         <a class="pull-left" href="/userdetails"><img class="media-object" ng-src="{{user.IMAGE_URL}}" height="64" width="64"></a>
                         <div class="media-body">
-                           <h4 class="media-heading">{{user.FIRST_NAME}} {{user.LAST_NAME}}</h4>
+                           <h4 class="media-heading"><a href="/userdetails" style="color:black;">{{user.FIRST_NAME}} {{user.LAST_NAME}}</a></h4>
                            <p></p>
                         </div>
                      </li>
                   </ul>
                   <ul class="media-list">
                      <li class="media">
-                        <a class="pull-left" href="/friendslist"><img class="media-object" src="https://hdwallpapers.cat/wallpaper_high_contrast/two_friends_happiness_colors_smile_abstract_high_contrast_hd-wallpaper-1559778.jpg" height="54" width="54"></a>
+                        <a class="pull-left" href="/friendslist"><img class="media-object" src="/images/friend_list_icon.png" height="54" width="54"></a>
                         <div class="media-body">
-                           <h4 class="media-heading">Friends</h4>
+                           <h4 class="media-heading"><a href="/friendslist" style="color:black;">Friends</a></h4>
                         </div>
                      </li>
                      <li class="media">
-                        <a class="pull-left" href="/groups"><img class="media-object" src="http://previews.123rf.com/images/fffranz/fffranz1312/fffranz131200046/24441438-abstract-schematic-illustration-of-groups-and-behavior-therapy-Stock-Vector.jpg" height="54" width="54"></a>
+                        <a class="pull-left" href="/groups"><img class="media-object" src="/images/Group_Icon.jpg" height="54" width="54"></a>
                         <div class="media-body">
-                           <h4 class="media-heading">Groups</h4>
+                           <h4 class="media-heading"><a href="/groups" style="color:black;">Groups</a></h4>
                         </div>
                      </li>
                   </ul>
@@ -97,7 +97,7 @@
                   </div>
                   <div class="row">
                      <div class="col-md-12">
-                        <h2>Create your own group</h2>
+                        <h3>Create your group</h3>
                      </div>
                      <div class="col-md-12">
                         <div class="row">
@@ -116,10 +116,9 @@
                               </div>
                            </form>
                            <div>
-                                <button type="button" class="btn btn-lg btn-primary" ng-click="createGroup()">Create Group</button>
+                                <button type="button" class="btn btn-lg btn-success" ng-click="createGroup()" style="padding: 1px 1px;">Create Group</button>
                           </div>
                         </div>
-                        <br>
                         <div class="row" ng-show="group.GROUP_NAME.length||group.error">
                         <div class="row" ng-show="group.error">
 	                        <div class="alert alert-danger" ng-show="group.error">
@@ -138,7 +137,7 @@
 						               </div>
 						               <div class="col-md-10 text-justify">
 						                  <blockquote>
-						                     <p>{{group.GROUP_NAME}}</p>
+						                     <p><b>{{group.GROUP_NAME}}</b></p>
 						                     <footer>{{group.GROUP_INFO}}</footer>
 						                  </blockquote>
 						               </div>
@@ -152,10 +151,10 @@
                   </div>
                   <div class="row">
                      <div class="col-md-6">
-                        <h2>Browse Groups</h2>
+                        <h3><img style="min-height:30px;height:30px;" alt="" src="/images/browsegroups.png">&nbsp;&nbsp;Browse Groups</h3>
                      </div>
                      <div class="col-md-6">
-                        <h2>My Groups</h2>
+                        <h3><img style="min-height:30px;height:30px;" alt="" src="/images/my-groups-icon.png">&nbsp;&nbsp;My Groups</h3>
                      </div>
                   </div>
                   <div class="row">
@@ -167,7 +166,7 @@
                            <li class="media" ng-repeat="group in allgroups">
                               <a class="pull-left" href="" ng-click="addUserToGroup(group)"><img class="media-object" ng-src={{group.IMAGE_URL}} height="54" width="54"></a>
                               <div class="media-body">
-                                 <h4 class="media-heading">{{group.GROUP_NAME}}</h4>
+                                 <h4 class="media-heading"><b>{{group.GROUP_NAME}}</b>&nbsp;&nbsp;<button class="btn btn-primary" ng-click="addUserToGroup(group)" style="padding: 1px 1px;background-color:#3B5998; color: #E8F3F0;"><b>Join Group</b></button></h4>
                                  <p>{{group.GROUP_INFO}}</p>
                               </div>
                            </li>
@@ -181,7 +180,7 @@
                            <li class="media" ng-repeat="group in mygroups">
                               <a class="pull-left" href="" ><img class="media-object" ng-src={{group.IMAGE_URL}} height="54" width="54"></a>
                               <div class="media-body">
-                                 <h4 class="media-heading">{{group.GROUP_NAME}}<a class="pull-right" href=""ng-click="removeUserFromGroup(group)"> Remove Myself from this Group</a></h4>
+                                 <h4 class="media-heading"><b>{{group.GROUP_NAME}}</b>&nbsp;&nbsp;<button class="btn btn-primary" ng-click="removeUserFromGroup(group)" style="padding: 1px 1px;background-color:#3B5998;"><b>Leave Group</b></button></h4>
                                  <p>{{group.GROUP_INFO}}</p>
                               </div>
                            </li>
